--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Israel\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\israel\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
